# hatch-conda

./: HISTORY.md  README.md  hatch.toml  pyproject.toml
.github/workflows/: test.yml
hatch_conda/: hooks.py  plugin.py
tests/: conftest.py  test_build.py  test_cli_usage.py  test_collection.py  test_config.py  utils.py
