[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-conda"
description = "Hatch plugin for conda environments"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = [
  "conda",
  "environment",
  "hatch",
  "plugin",
]
authors = [
  { name = "OldGrumpyViking", email = "old.grumpy.viking@hotmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Framework :: Hatch",
]
dependencies = [
  "hatch>=1.2.0",
  "pexpect~=4.8",
]
dynamic = ["version"]

[project.urls]
History = "https://github.com/OldGrumpyViking/hatch-conda/blob/master/HISTORY.md"
Issues = "https://github.com/OldGrumpyViking/hatch-conda/issues"
Source = "https://github.com/OldGrumpyViking/hatch-conda"

[project.entry-points.hatch]
conda = "hatch_conda.hooks"

[tool.hatch.version]
path = "hatch_conda/__about__.py"

[tool.mypy]
disallow_untyped_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = false

[tool.black]
target-version = ["py37"]
line-length = 120

[tool.isort]
py_version = "37"
profile = "black"
include_trailing_comma = true
use_parentheses = true
src_paths = ["hatch_conda", "tests"]
line_length = 120

[tool.coverage.run]
branch = true
parallel = true
source_pkgs = ["hatch_conda", "tests"]
omit = [
  "hatch_conda/__about__.py",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_covered = true
skip_empty = true
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.flake8]
exclude = [".direnv", ]
select = ["B","C","E","F","W","B001","B003","B006","B007","B301","B305","B306","B902","Q001","Q002","Q003"]
ignore = ["E203","E722","W503"]
max-line-length = 120